compiler/testData/diagnostics/tests/overload/ConflictingOverloadsFunsDifferentReturnInPackage.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
package qwertyuiop

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}
